ingress/node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  namespace: default
  labels:
    app: nodejs-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: node.com.purse280.messwithdns.com  # Replace with your actual domain or IP address
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-node  # Replace with your Node.js service name
                port:
                  number: 3000  # Replace with your Node.js service port
